--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,5 @@ jobs:
       run : cd
     - name: Compile
       run : gcc Register2023.c
+    - name: Run Register2023.exe
+      run : Register2023
