--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - name : Show directory
       run : cd
     - name: Compile
-      run : gcc Register2023.c -o D:\a\AIassignmentRegister2023\AIassignmentRegister2023
+      run : gcc Register2023.c -o D:\a\AIassignmentRegister2023\AIassignmentRegister2023\result.exe
     - name : Changing Directories
       run : cd D:\a\AIassignmentRegister2023\AIassignmentRegister2023
     - name : Showing files in directory
